--- a/demo/index.html
+++ b/demo/index.html
@@ -10,10 +10,16 @@
 
 <h1>An example of using <code>&lt;athena-vimeo></code></h1>
 
-<athena-vimeo videoid="96559833" height="480" width="640" caption="Looks even better than the original"></athena-vimeo>
+<h2>Fixed Dimensions</h2>
+<athena-vimeo videoid="96559833" height="281" width="500"></athena-vimeo>
 
-
-<athena-vimeo videoid="96559833" responsive="1" caption="Looks even better than the original"></athena-vimeo>
+<h2>Responsive video</h2>
+<athena-vimeo videoid="96559833" responsive="1"></athena-vimeo>
 
 </body>
 </html>
+
+
+<!--
+<iframe src="https://player.vimeo.com/video/?color=ffffff&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/32113233">Handmade Portraits: The Sword Maker</a> from <a href="https://vimeo.com/etsy">Etsy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+-->
