--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>athena-vimeo Demo</title>
-  <script src="../../webcomponentsjs/webcomponents.js"></script>
+  <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
   <link rel="import" href="../athena-vimeo.html">
 </head>
 <body unresolved>
@@ -18,8 +18,3 @@
 
 </body>
 </html>
-
-
-<!--
-<iframe src="https://player.vimeo.com/video/?color=ffffff&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/32113233">Handmade Portraits: The Sword Maker</a> from <a href="https://vimeo.com/etsy">Etsy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
--->
